--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,259 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              tools:context=".Fragments.Register"
-              android:orientation="vertical"
-              android:padding="10dp"
-              android:background="#fcfcfc"
-              android:gravity="center"
-              android:id="@+id/ll">
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
+    tools:context=".Fragments.Register"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
+<!-- The first child in the layout is for the main Activity UI-->
+<RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        tools:context=".MainActivity"
+        android:background="#ffffffff">
+</RelativeLayout>
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="-60dp"
-            android:textSize="18dp"
-            android:text="Registration for TOLLGATE v0.01"
-            android:textStyle="bold" />
+<!-- Side navigation drawer UI -->
+<ListView
+        android:id="@+id/navList"
+        android:layout_width="200dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="left|start"
+        android:background="#ffeeeeee"/>
 
-    <LinearLayout
-            android:clipToPadding="false"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        <androidx.cardview.widget.CardView
-                android:clickable="true"
-                android:id="@+id/Register"
-                android:layout_width="400dp"
-                android:layout_height="340dp"
-                android:layout_margin="10dp">
-
-
-
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal" >
-
-                <TextView
-                        android:id="@+id/textView1"
-                        android:layout_width="9dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="60dp"
-                        android:layout_marginTop="10dp"
-                        android:textSize="18dp"
-                        android:text="Username:"
-                        android:textStyle="italic"
-                        android:layout_weight="1"/>
-
-                <EditText
-                        android:id="@+id/Username2"
-                        android:layout_width="140dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="40dp"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:inputType="textPersonName"/>
-            </LinearLayout>
-
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="40dp"
-                    android:orientation="horizontal">
-
-                <TextView
-                        android:id="@+id/textView3"
-                        android:layout_width="9dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="60dp"
-                        android:layout_marginTop="10dp"
-                        android:textSize="18dp"
-                        android:text="Password:"
-                        android:textStyle="italic"
-                        android:layout_weight="1"/>
-
-                <EditText
-                        android:id="@+id/Username3"
-                        android:layout_width="140dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="40dp"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:inputType="textPersonName"/>
-            </LinearLayout>
-
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="80dp"
-                    android:orientation="horizontal">
-
-                <TextView
-                        android:id="@+id/textView4"
-                        android:layout_width="9dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="60dp"
-                        android:layout_marginTop="10dp"
-                        android:textSize="18dp"
-                        android:text="Confirm Password:"
-                        android:textStyle="italic"
-                        android:layout_weight="1"/>
-
-                <EditText
-                        android:id="@+id/Username6"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="40dp"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:inputType="textPersonName"/>
-            </LinearLayout>
-
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="120dp"
-                    android:orientation="horizontal">
-
-                <TextView
-                        android:id="@+id/textView7"
-                        android:layout_width="-10dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="60dp"
-                        android:layout_marginTop="10dp"
-                        android:textSize="18dp"
-                        android:text="Email:"
-                        android:textStyle="italic"/>
-
-                <EditText
-                        android:id="@+id/Username7"
-                        android:layout_width="80dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="40dp"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:inputType="textPersonName"/>
-            </LinearLayout>
-
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="200dp"
-                    android:orientation="horizontal">
-
-                <TextView
-                        android:id="@+id/textView9"
-                        android:layout_width="13dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="60dp"
-                        android:layout_marginTop="10dp"
-                        android:textSize="18dp"
-                        android:text="First Name:"
-                        android:textStyle="italic"
-                        android:layout_weight="1"/>
-
-                <EditText
-                        android:id="@+id/Username9"
-                        android:layout_width="130dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="40dp"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:inputType="textPersonName"/>
-            </LinearLayout>
-
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="160dp"
-                    android:orientation="horizontal">
-
-                <TextView
-                        android:id="@+id/textView8"
-                        android:layout_width="9dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="60dp"
-                        android:layout_marginTop="10dp"
-                        android:textSize="18dp"
-                        android:text="Last Name:"
-                        android:textStyle="italic"
-                        android:layout_weight="1"/>
-
-                <EditText
-                        android:id="@+id/Username8"
-                        android:layout_width="130dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="40dp"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:inputType="textPersonName"/>
-            </LinearLayout>
-
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="240dp"
-                    android:orientation="horizontal">
-
-                <TextView
-                        android:id="@+id/textView10"
-                        android:layout_width="-10dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="60dp"
-                        android:layout_marginTop="10dp"
-                        android:textSize="18dp"
-                        android:text="Address:"
-                        android:textStyle="italic"/>
-
-                <EditText
-                        android:id="@+id/Username10"
-                        android:layout_width="80dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="40dp"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:inputType="textPersonName"/>
-            </LinearLayout>
-
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="280dp"
-                    android:orientation="horizontal">
-
-                <TextView
-                        android:id="@+id/textView11"
-                        android:layout_width="33dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="60dp"
-                        android:layout_marginTop="10dp"
-                        android:textSize="18dp"
-                        android:text="Personal ID:"
-                        android:textStyle="italic"
-                        android:layout_weight="1"/>
-
-                <EditText
-                        android:id="@+id/Username11"
-                        android:layout_width="140dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="40dp"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:inputType="textPersonName"/>
-            </LinearLayout>
-
-
-        </androidx.cardview.widget.CardView>
-    </LinearLayout>
-    <Button
-            android:text="Confirm Registration"
-            android:layout_marginRight="-10dp"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content" android:id="@+id/button"/>
-</LinearLayout>
+</android.support.v4.widget.DrawerLayout>
