--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -75,11 +75,11 @@
                     android:gravity="center">
 
                 <EditText
-                        android:id="@+id/Username2"
+                        android:id="@+id/Password"
                         android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:inputType="textPersonName"/>
+                        android:inputType="textPassword"/>
 
             </LinearLayout>
 
@@ -108,5 +108,6 @@
             android:textColor="@color/KapschOrange"
             android:background="@color/cardview_light_background"
             android:layout_width="200dp"
-            android:layout_height="wrap_content" android:id="@+id/button"/>
+            android:layout_height="wrap_content" android:id="@+id/button"
+    />
 </LinearLayout>
