--- a/app/src/main/res/layout/content_main2.xml
+++ b/app/src/main/res/layout/content_main2.xml
@@ -60,7 +60,7 @@
                         android:layout_weight="1"/>
 
                 <TextView
-                        android:id="@+id/TextViewCord2"
+                        android:id="@+id/coordinatesText"
                         android:layout_width="9dp"
                         android:textColor="#000000"
                         android:layout_height="match_parent"
@@ -92,7 +92,7 @@
                         android:layout_weight="1"/>
 
                 <TextView
-                        android:id="@+id/TextViewClosestGantry"
+                        android:id="@+id/distanceText"
                         android:layout_width="9dp"
                         android:textColor="#000000"
                         android:layout_height="match_parent"
