--- a/app/src/main/res/layout/fragment_default_travel.xml
+++ b/app/src/main/res/layout/fragment_default_travel.xml
@@ -71,7 +71,7 @@
                         android:layout_weight="1"/>
 
                 <TextView
-                        android:id="@+id/TextViewCord2"
+                        android:id="@+id/coordinatesText"
                         android:layout_width="9dp"
                         android:textColor="#000000"
                         android:layout_height="match_parent"
@@ -103,7 +103,7 @@
                         android:layout_weight="1"/>
 
                 <TextView
-                        android:id="@+id/TextViewClosestGantry"
+                        android:id="@+id/distanceText"
                         android:layout_width="9dp"
                         android:textColor="#000000"
                         android:layout_height="match_parent"
