--- a/app/src/main/res/layout/fragment_default_travel.xml
+++ b/app/src/main/res/layout/fragment_default_travel.xml
@@ -75,12 +75,11 @@
                         android:layout_width="9dp"
                         android:textColor="#000000"
                         android:layout_height="match_parent"
-                        android:layout_marginRight="160dp"
+                        android:layout_marginRight="0"
                         android:layout_marginTop="10dp"
                         android:textSize="18dp"
-                        android:text="xx.xxx.xx"
                         android:textStyle="italic"
-                        android:layout_weight="1"/>
+                        android:layout_weight="1" android:layout_marginLeft="-160"/>
 
             </LinearLayout>
 
@@ -110,7 +109,6 @@
                         android:layout_marginRight="100dp"
                         android:layout_marginTop="10dp"
                         android:textSize="18dp"
-                        android:text="xxx meters"
                         android:textStyle="italic"
                         android:layout_weight="1"/>
 
