--- a/app/src/main/res/layout/fragment_default_travel.xml
+++ b/app/src/main/res/layout/fragment_default_travel.xml
@@ -60,26 +60,21 @@
 
                 <TextView
                         android:id="@+id/TextViewCord"
-                        android:layout_width="9dp"
+                        android:layout_width="wrap_content"
                         android:textColor="#000000"
                         android:layout_height="match_parent"
-                        android:layout_marginLeft="62dp"
-                        android:layout_marginTop="10dp"
                         android:textSize="17dp"
                         android:text="Cordinates: "
-                        android:textStyle="italic"
-                        android:layout_weight="1"/>
+                        android:textStyle="italic" android:layout_marginLeft="62dp" android:layout_marginTop="10dp"/>
 
                 <TextView
                         android:id="@+id/coordinatesText"
                         android:layout_width="9dp"
                         android:textColor="#000000"
                         android:layout_height="match_parent"
-                        android:layout_marginRight="0"
-                        android:layout_marginTop="10dp"
                         android:textSize="18dp"
                         android:textStyle="italic"
-                        android:layout_weight="1" android:layout_marginLeft="-160"/>
+                        android:layout_marginTop="10dp"/>
 
             </LinearLayout>
 
@@ -91,7 +86,7 @@
 
                 <TextView
                         android:id="@+id/TextViewGantry"
-                        android:layout_width="9dp"
+                        android:layout_width="wrap_content"
                         android:textColor="#000000"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="62dp"
@@ -99,18 +94,17 @@
                         android:textSize="17dp"
                         android:text="Closest gantry: "
                         android:textStyle="italic"
-                        android:layout_weight="1"/>
+                />
 
                 <TextView
                         android:id="@+id/distanceText"
                         android:layout_width="9dp"
                         android:textColor="#000000"
                         android:layout_height="match_parent"
-                        android:layout_marginRight="100dp"
                         android:layout_marginTop="10dp"
                         android:textSize="18dp"
                         android:textStyle="italic"
-                        android:layout_weight="1"/>
+                />
 
             </LinearLayout>
 
