--- a/app/src/main/res/layout/fragment_map_travel.xml
+++ b/app/src/main/res/layout/fragment_map_travel.xml
@@ -1,20 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
+             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".Fragments.MapTravelFragment">
 
     <!--<com.google.android.gms.maps.MapView android:layout_width="match_parent"-->
-                                         <!--android:layout_height="match_parent">-->
-        <!---->
+    <!--android:layout_height="match_parent">-->
+    <!---->
     <!--</com.google.android.gms.maps.MapView>-->
 
     <fragment
-        android:id="@+id/map_fragment"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+            android:id="@+id/map_fragment"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:layout_gravity="bottom" android:paddingBottom="15dp">
+        <Button
+                android:text="Hide map"
+                android:textColor="@color/KapschOrange"
+                android:background="#000000"
+                android:layout_marginLeft="30dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/buttonMapHideMap"
+                android:layout_marginRight="30dp"/>
+        <Button
+                android:text="Stop travel"
+                android:textColor="@color/KapschOrange"
+                android:background="#000000"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="30dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/buttonMapStopTravel"
+                android:layout_marginRight="30dp"/>
+    </LinearLayout>
 
     <!--<fragment android:id="@+id/aa" android:layout_width="match_parent" android:layout_height="400dp"/>-->
 
